--- a/lab1_styles.css
+++ b/lab1_styles.css
@@ -13,6 +13,22 @@ p {
     font-size: 24pt;
 }
 
+
 a {
     color:red;
 }
+a:hover {
+ color: blue
+}
+ 
+
+ #important_paragraph:hover {
+ 	background-color: yellow;
+ 	font-size: 40px
+
+ }
+
+.less_important_paragraphs:hover {
+	color: blue 
+}
+
